<resources>
    <string name="app_name">Royal Restaurant</string>

    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>
    <string name="got_it">Got It</string>

    <string name="start_title_1">What it is about ?</string>
    <string name="start_title_2">What do we offer ?</string>
    <string name="start_title_3">Our Service</string>

    <string name="start_text_1">Royal Restaurant is a BBQ and Fast Food based restaurant opened recently in DHA V, Karachi. It offers many different types of food and it\'s menu will definitely compel you to give it a try.</string>
    <string name="start_text_2">We offer Seven different categories of Food (uptil now, and we\'re adamant to expand that further). It includes BBQ, Fast Food, Chinese, Shawarma, French Fries, Drinks and Soups.</string>
    <string name="start_text_3">We provide quick Home Delivery Service. You just have to add the food you would like to eat, to the cart and order that food. You should leave the rest to us who will provide you food at your door step ASAP.</string>

    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Sign Up</string>

    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="signup_name_hint">Name</string>
    <string name="signup_address_hint">Address</string>
    <string name="signup_phone_hint">Phone</string>

    <string name="do_no_have_account">Don\'t have an Account yet?</string>
    <string name="agree_terms">By Signing up, you agree to our Terms of Services and Privacy Policy.</string>

    <string name="no_name">Please enter your Name</string>
    <string name="no_email">Please enter your Email</string>
    <string name="no_password">Please enter your Password</string>
    <string name="no_address">Please enter your Address</string>
    <string name="no_phone">Please enter your Phone Number</string>

    <string name="no_internet">Please check your Internet Connection &amp; Tryagain</string>
    <string name="action_cart">Cart</string>
    <string name="action_order">Order</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Royal Restaurant</string>
    <string name="menu_fragment">Menu</string>
    <string name="orders_fragment">Orders</string>
    <string name="favourites_fragment">Favourites</string>
    <string name="profile_fragment">Profile</string>

    <string name="menu_category_soup">Soups</string>
    <string name="menu_category_chinese">Chinese Food</string>
    <string name="menu_category_fast_food">Fast Food</string>
    <string name="menu_category_bbq">B.B.Q</string>
    <string name="menu_category_shawarma">Shawarma</string>
    <string name="menu_category_fries">French Fries</string>
    <string name="menu_category_drinks">Drinks</string>

    <string name="bbq_chicken_tikka">Chicken Tikka</string>
    <string name="bbq_beef_bihari_boti">Beef Bihari Boti</string>
    <string name="bbq_seekh_kabab">Seekh Kabab</string>
    <string name="bbq_beef_roll">Beef Roll</string>
    <string name="bbq_chicken_boti">Chicken Boti</string>

    <string name="fast_food_beef_burger">Beef Burger</string>
    <string name="fast_food_beef_cheese_burger">Cheese Burger</string>
    <string name="fast_food_chicken_burger">Chicken Burger</string>
    <string name="fast_food_chicken_cheese_burger">Chicken Cheese Burger</string>
    <string name="fast_food_chicken_sandwich">Chicken Sandwich</string>
    <string name="fast_food_chicken_broast">Chicken Broast</string>

    <string name="chinese_chicken_grilled_shashlik">Chicken Grilled Shashlik</string>
    <string name="chinese_chicken_ginger">Chicken Ginger</string>
    <string name="chinese_chicken_jalfrezi">Chicken Jalfrezi</string>
    <string name="chinese_chicken_manchurian">Chicken Manchurian</string>
    <string name="chinese_plain_rice">Plain Rice</string>
    <string name="chinese_fish_and_chips">Fish &amp; Chips</string>

    <string name="shawarma_roll">Shawarma (Roll)</string>
    <string name="shawarma_plater">Shawarma (Plater)</string>

    <string name="fries_small">French Fries (Small)</string>
    <string name="fries_medium">French Fries (Medium)</string>
    <string name="fries_large">French Fries (Large)</string>

    <string name="drinks_seven_up">7 Up</string>
    <string name="drinks_coca_cola">Coca Cola</string>
    <string name="drinks_dew">Mountain Dew</string>
    <string name="drinks_fanta">Fanta</string>
    <string name="drinks_pepsi">Pepsi</string>
    <string name="drinks_sprite">Sprite</string>

    <string name="soup_chicken_corn">Chicken Corn Soup</string>
    <string name="soup_hot_and_sour">Hot &amp; Sour Soup</string>

</resources>
